tests/typecheck/pass/zeros.sail

function forall Nat 'n. bit['n] Zeros () =
{
  (bit['n]) 0
}

let (bit[5]) x = Zeros ()
